--- a/141B/index.html
+++ b/141B/index.html
@@ -37,20 +37,21 @@
 	Because statistical tools, data types, and computational frameworks are constantly shifting, we will emphasize the ability to parse and understand the foundations of data science, through the enumeration of principles, standards, and fundamentals.
       </p>
 
-      <h2>The Course: 2018</h2>
+      <h2>The Course: Fall 2018</h2>
       <p>
 	<ul>
-	  <li>1. All communications should be done on slack: you should have received an email inviting you to this, email me if not</li>
-	  <li>2. There will be 6 assignments (you will get a link on slack when they are assigned) and one final project (homeworks combined are 50% of the grade, and the final is also 50%).</li>
+	  <li>1. All communications should be done on canvas (with your fellow students) and you should email me at prof.jsharpna@gmail.com</li>
+	  <li>2. There will be 6-8 assignments on canvas.</li>
 	  <li>3. You should do the assignments on your own, but you can get advice from others in the class.  You should never copy code from someone else in the course on the homeworks.</li>
-	  <li>4. Scheduling questions (e.g. waitlist) should be directed to the undergrad program coordinator, Kim McMullen at kimcmullen@ucdavis.edu</li>
-	  <li>5. Office hours are: Wed. and Thurs. 11am-12pm (Prof. James) and Thurs. 12-2pm (TA Gary) in Academic Surge 2142, starting on Thurs. 11 Jan.</li>
+	  <li>5. Office hours are TBD</li>
 	  <li>6. Be respectful: to your colleagues, your TAs, your Prof, and yourself!</li>
 	</ul>
       </p>
 
 
-      <h2>Recommended Reading</h2>
+      <h2>Draft Book: <a href="../DataScienceBook">Data Science: Principles and Python</a> by J. Sharpnack (me!)</h2>
+
+      <h2>Other Reading</h2>
       <p>
 	<ul>
 	  <li><a href="https://www.amazon.com/Python-Probability-Statistics-Machine-Learning/dp/3319307150/ref=sr_1_1?s=amazon-devices&ie=UTF8&qid=1515366647&sr=8-1&keywords=python+statistics+probability">Python for Probability, Statistics, and Machine Learning by Jose Unpingco</a></li>
@@ -61,7 +62,7 @@
       
 
       <h2>Final Project</h2>
-      <p> The final project is 50% of the grade for the course, and it should demonstrate a large proportion of what you have learned from the course.  If you do not display proficiency in the key technologies that we have gone over, then you will not receive a good grade.  This includes
+      <p> The final project is 40% - 50% of the grade for the course, and it should demonstrate a large proportion of what you have learned from the course.  If you do not display proficiency in the key technologies that we have gone over, then you will not receive a good grade.  This includes
 	<ul>
 	  <li>- extracting data through web scraping, api calls, and parsing structured text or other unorthodox data types</li>
 	  <li>- a thorough exploratory data analysis involving visualization, unsupervised learning, and descriptive statistics
@@ -79,38 +80,8 @@
 
 	</ol>
 	
-<h2>Syllabus</h2>
-<table>
-  <tr><th>&nbsp;&nbsp;Date&nbsp;&nbsp;</th><th>Material (required reading, slides, notebooks)</th><th>Technology &amp; Principles</th></tr>
-  <tr><td>M 1-8</td><td><a href="https://docs.google.com/presentation/d/1En0nL6dKiJbiJRA_nuna-Uo0ZFlB2dfI6Jmi9fhfjoI/edit?usp=sharing">Slides</a></td><td>Intro to Data Science</td></tr>
-  <tr><td>W 1-10</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_1_Workflow.ipynb">Required reading</a>, <a href="https://docs.google.com/presentation/d/1Z-t_N-nPyFxaAvxWPGnoxKbFYnIMRtl0jmmw_1eJh2Y/edit?usp=sharinghttps://docs.google.com/presentation/d/1Z-t_N-nPyFxaAvxWPGnoxKbFYnIMRtl0jmmw_1eJh2Y/edit?usp=sharing">slides</a></td><td>Data science workflow, ipython, Jupyter</td></tr>
-  <tr><td>F 1-12</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_2_Workflow2.ipynb">Required reading</a>, <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_2_Scrabble.ipynb">scrabble notebook</a>, <a href="https://docs.google.com/presentation/d/13lcIHHMSqgrRk5Wcew7HkpCPuH5qQfPv2DraHm5i2xw/edit?usp=sharing">slides</a></td><td>git, Versioning systems, python basics</td>
-  <tr><td>W 1-17</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_3_Python_Basics.ipynb">Required reading</a>, <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_3_Scrabble.ipynb">notebook</a></td><td>Python basics, variable scope, modular code</td>
-  <tr><td>F 1-19</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_4_Python_Advanced.ipynb">Required reading</a>, <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_4_lab.ipynb">lab</a></td><td>immutable/mutable, data structures, pythonic programming</td>
-  <tr><td>M 1-22</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_5_Numpy.ipynb">Required reading</a>, <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_5_Notebook.ipynb">notebook</a></td><td>Matrices, numpy, Vectorization</td></tr>
-  <tr><td>W 1-24</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_6_Reading_Data.ipynb">Required reading</a>, <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_6_Notebook.ipynb">notebook</a></td><td>reading data, pandas, processing data in batches</td></tr>
-  <tr><td>F 1-26</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_7_Plotting_Basics.ipynb">Required reading</a>, <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_7_Notebook.ipynb">notebook</a></td><td>matplotlib, Plotting sense</td></tr>
-  <tr><td>M 1-29</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_8_Pandas.ipynb">Required reading</a>,<a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_8_Notebook.ipynb"> notebook</a></td><td>Data Wrangling, pandas, Missing data</td></tr>
-  <tr><td>W 1-31</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_9_Pandas_2.ipynb">Required reading</a></td><td>Indexing, merging and transforming data</td></tr>
-  <tr><td>F 2-2</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_10_Notebook.ipynb">Notebook</a></td><td>A data munging and analysis example: OH 2016</td></tr>
-  <tr><td>M 2-5</td><td><a href="https://github.com/jsharpna/DavisSML/blob/master/lectures/classify/README.md">Classification notes</a></td><td>Machine Learning, evaluating performance, sklearn, classification</td></tr>
-  <tr><td>W 2-7</td><td><a href="https://github.com/unpingco/Python-for-Probability-Statistics-and-Machine-Learning/blob/master/chapters/machine_learning/notebooks/learning_theory.ipynb">Reading from Unpingco</a></td><td>Machine Learning, overfitting and model selection</td></tr>
-  <tr><td>F 2-9</td><td><a href="https://github.com/unpingco/Python-for-Probability-Statistics-and-Machine-Learning/blob/master/chapters/machine_learning/notebooks/logreg.ipynb">Reading from Unpingco</a><a href="https://github.com/jsharpna/DavisSML/blob/master/labs/lab1-soln.ipynb">, notebook</a></td><td>Machine Learning, logistic regression and SVMs</td></tr>
-  <tr><td>M 2-12</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_11_Text.ipynb">Reading, </a><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_11_Notebook.ipynb">notebook</a></td><td>nltk, From text to numbers, n-grams</td></tr>
-  <tr><td>W 2-14</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_12_Web_Data.ipynb">Reading,</a> <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_12_Pet_API.ipynb"> notebook</a></td><td>requests, APIs, JSON</td></tr>
-  <tr><td>F 2-16</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_13_SQL.ipynb">Reading, </a><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_13_Notebook.ipynb">notebook</a></td><td>Database systems, sql, sqlalchemy</td></tr>
-  <tr><td>W 2-21</td><td>TA day I<td>Group work and TA presentations</td></tr>
-  <tr><td>F 2-23</td><td>TA day II<td>Group work and TA presentations</td></tr>
-  <tr><td>M 2-26</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_14_HTML.ipynb">Reading,</a> <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_14_Notebook.ipynb">notebook</a></td><td>HTML, DOM, Beautiful soup</td></tr>
-  <tr><td>W 2-28</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_15_Interactive_Vis.ipynb">Notebook</a>, <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/mpld3_demo.ipynb">mpld3 demo</a></td><td>Interactive visualization, mpld3</td></tr>
-  <tr><td>F 3-2</td><td>Reading, notebook</td><td>D3, fixing the choropleth map</td></tr>
-  <tr><td>M 3-5</td><td>Group presentations</td><td></td></tr>
-  <tr><td>W 3-7</td><td>Group presentations</td><td></td></tr>
-  <tr><td>F 3-9</td><td>Group presentations</td><td></td></tr>
-  <tr><td>M 3-12</td><td>Group presentations</td><td></td></tr>
-  <tr><td>W 3-14</td><td>Group presentations</td><td></td></tr>
-  <tr><td>M 3-16</td><td>Group presentations</td><td></td></tr>
-</table>
+<h2>Syllabus: TBD</h2>
+
 
       <footer class="site-footer">
 	Copyright James Sharpnack &copy; 2016
