--- a/DataScienceBook/index.html
+++ b/DataScienceBook/index.html
@@ -29,6 +29,7 @@
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="Introduction" href="unit1/intro.html" />
    
+  <link rel="stylesheet" href="_static/custom.css" type="text/css" />
   
   
   
