--- a/141B/index.html
+++ b/141B/index.html
@@ -49,7 +49,8 @@
       </p>
 
 
-      <h2>Draft Book: <a href="http://anson.ucdavis.edu/~jsharpna/DSBook/">Data Science: Principles and Python</a></h2> by J. Sharpnack
+      <h2>Book:</h2>
+      <h3><a href="http://anson.ucdavis.edu/~jsharpna/DSBook/">Data Science: Principles and Python</a> (in progress) by J. Sharpnack </h3>
 
       <h2>Other Reading</h2>
       <p>
