--- a/141B/index.html
+++ b/141B/index.html
@@ -49,10 +49,10 @@
       </p>
 
 
-      <h2>Book:</h2>
-      <h3><a href="http://anson.ucdavis.edu/~jsharpna/DSBook/">Data Science: Principles and Python</a> (in progress) by J. Sharpnack </h3>
+      <h2>Book</h2>
+      <ul><li><h3><a href="http://anson.ucdavis.edu/~jsharpna/DSBook/">Data Science: Principles and Python</a> (in progress) by J. Sharpnack </h3></li></ul>
 
-      <h2>Other Reading</h2>
+      <h2>Other Optional Reading</h2>
       <p>
 	<ul>
 	  <li><a href="https://www.amazon.com/Python-Probability-Statistics-Machine-Learning/dp/3319307150/ref=sr_1_1?s=amazon-devices&ie=UTF8&qid=1515366647&sr=8-1&keywords=python+statistics+probability">Python for Probability, Statistics, and Machine Learning by Jose Unpingco</a></li>
