--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 	  <li>Davis email: jsharpna@ucdavis.edu (use this for all other business or research)</li>
 	  </ul>
 
+<h3>This week's talks</h3>
+<ol>
+<li><a href="http://anson.ucdavis.edu/~jsharpna/141Blectures/lecture1/lecture1.slides.html">141B Lecture 1</a></li>
+</ol>
+
 <h3>Recent Papers and Presentations</h3>
 <ol>
   <li><b>Graph Signal Processing: Methods and Applications</b>, <i>James Sharpnack,</i> <a href="research/JSM2018.pdf">presentation at JSM 2018</a>.
