--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 <h3>This week's talks</h3>
 <ol>
 <li><a href="http://anson.ucdavis.edu/~jsharpna/141Blectures/lecture1/lecture1.slides.html">141B Lecture 1</a></li>
+<li><a href="research/detectnets_pres.pdf">UCD Statistics Seminar</a></li>
+<li><a href="http://anson.ucdavis.edu/~jsharpna/141Blectures/lecture2/lecture2.slides.html">141B Lecture 2</a></li>
 </ol>
 
 <h3>Recent Papers and Presentations</h3>
