--- a/index.html
+++ b/index.html
@@ -40,10 +40,7 @@
 	  <li>Davis email: jsharpna@ucdavis.edu (use this for all other business or research)</li>
 	  </ul>
 
-<h3>This week's talks</h3>
-<ol>
-<li><a href="http://anson.ucdavis.edu/~jsharpna/141Blectures/lecture3.slides.html">141B Lecture 3</a></li>
-</ol>
+<!-- <h3>This week's talks</h3> -->
 
 <h3>Recent Papers and Presentations</h3>
 <ol>
