--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 <ol>
   <li><a href="141B/index.html">Stats 141B</a>: Data & Web Technologies for Data Analysis</li>
   <li><a href="https://github.com/jsharpna/DavisSML/">Stats 208</a>: Statistical Machine Learning</li>
+    <li><a href="https://github.com/jsharpna/AML/">Stats 251</a>: Advanced Machine Learning</li>
 </ol>
 
 <h3>Students</h3>
